Ajustes em cursos.html

--- a/css/custom.css
+++ b/css/custom.css
@@ -333,6 +333,26 @@ ul {
 .has-alert .ball-alert:hover {
   background: #FF0120 !important;
 }
+.gray-darker {
+  background-color: #222222;
+}
+.gray-dark {
+  background-color: #333333;
+}
+.gray {
+  background-color: #555555;
+}
+.gray-light {
+  background-color: #777777;
+}
+.gray-lighter {
+  background-color: #f9f9f9;
+}
+.img-rounded {
+  width: 40px;
+  height: 40px;
+  border-radius: 40px;
+}
 .mc {
   margin-left: auto;
   margin-right: auto;
@@ -972,7 +992,6 @@ ul {
 }
 .footer-fixed-bottom {
   width: 100%;
-  background-color: #203141;
   color: #ffffff;
   position: fixed;
   bottom: 0;
@@ -980,9 +999,6 @@ ul {
   right: 0;
   padding: 20px;
   z-index: 850;
-}
-.dropdown-menu {
-  margin-top: -8px;
 }
 /*Customiza a tabela*/
 #tabexemplo-table-content tr {
@@ -1021,16 +1037,12 @@ ul {
   padding: 15px 15px 0px 15px;
 }
 .modal-custom .modal-header .close {
-  background-color: #00a69c;
   font-size: 30px;
   color: #ffffff;
   opacity: 1;
   min-height: 100%;
   padding: 13px;
   margin: -15px -15px 0 0;
-}
-.modal-custom .modal-footer {
-  background-color: #203141;
 }
 .modal-gray.modal {
   background: rgba(255, 255, 255, 0.09);
@@ -1057,7 +1069,6 @@ ul {
   font-size: 15px;
   font-weight: 700;
   text-transform: uppercase;
-  color: #203141;
 }
 .nav-tabs-one .tab-content {
   border-width: 0 1px 1px 1px;
