--- a/css/less/flow/flow-core.less
+++ b/css/less/flow/flow-core.less
@@ -24,11 +24,9 @@ h6,
   padding: 0;
 }
 
-
 address, dl, ol, p, ul {
   margin-bottom: 0;
 }
-
 
 // ---------------------------------------------------------------
 
@@ -349,4 +347,31 @@ address, dl, ol, p, ul {
       background: #FF0120 !important;
     }
   }
+}
+
+// Backgrouds
+.gray-darker {
+  background-color: @gray-darker;
+}
+
+.gray-dark {
+  background-color: @gray-dark;
+}
+
+.gray {
+  background-color: @gray;
+}
+
+.gray-light {
+  background-color: @gray-light;
+}
+
+.gray-lighter {
+  background-color: @gray-lighter;
+}
+
+.img-rounded{
+  width: 40px;
+  height: 40px;
+  border-radius: 40px;
 }
