--- a/css/less/flow/flow-variables.less
+++ b/css/less/flow/flow-variables.less
@@ -4,9 +4,6 @@
 //
 
 // Cores da identidade
-@mv-color-blue: #123045;
-@mv-color-darkblue: #203141;
-@mv-color-green: #00A69C;
 
 @navbar-height: 90px;
 @btn-border-radius: 8px;
@@ -35,7 +32,7 @@
 @gray: #eaeaec;
 @white: #ffffff;
 
-//Cores de do atmosfero
+//Cores
 @blue-one: #3984b7;
 @blue-darken-one: darken(@blue-one, 50%);
 @blue-light-one: #53b7f6;
@@ -48,12 +45,7 @@
 @font-size-base: 20px;
 
 
-//@font-family-montserrat: "montserrat", "opensans", Verdana, "Helvetica Neue", Helvetica, Arial, sans-serif;
-//@font-family-opensans: "opensans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-@font-family-primary: Helvetica, "Helvetica Neue", Arial, sans-serif;
-
 // Headings
-@headings-font-family: @font-family-primary;
 @headings-font-weight: normal;
 @headings-line-height: 1.1;
 @headings-color: inherit;
@@ -74,5 +66,12 @@
 @fa-font-path: "../../include";
 
 @fa-version: "2";
+
+
+@gray-darker:  lighten(#000, 13.5%); // #222
+@gray-dark:    lighten(#000, 20%);   // #333
+@gray:         lighten(#000, 33.5%); // #555
+@gray-light:   lighten(#000, 46.7%); // #777
+@gray-lighter: lighten(#000, 97.5%); // #eee
 
 
