--- a/css/less/flow/flow-core.less
+++ b/css/less/flow/flow-core.less
@@ -24,11 +24,9 @@ h6,
   padding: 0;
 }
 
-
 address, dl, ol, p, ul {
   margin-bottom: 0;
 }
-
 
 // ---------------------------------------------------------------
 
@@ -351,7 +349,37 @@ address, dl, ol, p, ul {
   }
 }
 
-
-.blue{
+.blue {
   color: @color-blue !important;
+}
+
+a.toggle-icon {
+  text-decoration: none;
+}
+
+.table {
+  a.toggle-icon {
+    border-bottom: none;
+  }
+}
+
+.img-circle-sm{
+  width:40px;
+  height:40px;
+  border-radius: 40px;
+}
+.img-circle-xs{
+  width:25px;
+  height:25px;
+  border-radius: 25px;
+}
+.neg-mt-1{
+  margin-top:-1px
+}
+
+td.hiddenrow {
+  height: 0 !important;
+  border: 0 !important;
+  padding: 0 !important;
+  margin: 0 !important;
 }
