--- a/css/less/flow/flow-datatables.less
+++ b/css/less/flow/flow-datatables.less
@@ -29,6 +29,14 @@
   }
   .top{
     float: right;
-    margin: 11px 0px 0px 0px;
+    //margin: 11px 0px 0px 0px;
+
+    select{
+      -moz-appearance: none;
+      text-indent: 0.01px;
+      text-overflow: '';
+      padding: .375rem .75rem;
+      height: 36px;
+    }
   }
 }
