--- a/css/less/flow/flow-btns.less
+++ b/css/less/flow/flow-btns.less
@@ -1,3 +1,12 @@
-.dropdown-menu{
+.dropdown-menu {
   margin-top: 0;
+}
+
+.btn-group, .btn-group-vertical {
+  .btn {
+    &.active {
+      background-color: #5cb85c;
+      border-color: #5cb85c;
+    }
+  }
 }
