--- a/css/less/flow/flow-content.less
+++ b/css/less/flow/flow-content.less
@@ -21,7 +21,7 @@
   }
 }
 
-
+// responsividade nos dropdowns
 @media (max-width: 767px) {
   .table-responsive .dropdown-menu {
     position: static !important;
@@ -31,4 +31,16 @@
   .table-responsive {
     overflow: visible;
   }
+}
+
+// muda cor dos checkboxes
+
+.checkbox-toggle input:checked + label:before {
+  background-color: #5cb85c;
+}
+.checkbox-toggle input:checked+label:before {
+  background-color: #5cb85c;
+}
+.checkbox-toggle input:checked + label:after {
+  border-color: #5cb85c;
 }
