Ajuste nas buscas e criação de serviços

--- a/css/less/flow/flow-custom.less
+++ b/css/less/flow/flow-custom.less
@@ -16,7 +16,7 @@
 //@import 'template/partials/grids';
 @import 'template/partials/interface';
 //@import 'template/partials/base';
-//@import 'template/partials/side';
+@import 'template/partials/side';
 //@import 'template/partials/print';
 
 //@import 'template/elements/player';
