--- a/css/less/flow/flow-datatables.less
+++ b/css/less/flow/flow-datatables.less
@@ -29,9 +29,21 @@
   .top {
     float: right;
     //margin: 11px 0px 0px 0px;
-    select{
+    select {
       padding: .375rem .75rem;
       height: 36px;
+    }
+  }
+}
+
+.table-custom {
+  .clearfix();
+  .dataTables_wrapper {
+    .search {
+      display: none !important;
+    }
+    .top {
+      float: none;
     }
   }
 }
