--- a/includes/side-bar.html
+++ b/includes/side-bar.html
@@ -1,7 +1,7 @@
 <div class="mobile-menu-left-overlay"></div>
 <nav class="side-menu">
   <ul class="side-menu-list">
-    <li class="gold with-sub">
+    <!--<li class="gold with-sub">
 	            <span>
 	                <i class="font-icon font-icon-widget"></i>
 	                <span class="lbl">Dashboard</span>
@@ -12,18 +12,25 @@
         <li><a href="#"><span class="lbl">Menu 3</span></a></li>
 
       </ul>
-    </li>
+    </li>-->
     <li class="blue with-sub">
 	            <span>
 	                <i class="fa fa-book" aria-hidden="true"></i>
 	                <span class="lbl">Acadêmico</span>
 	            </span>
       <ul>
-        <li><a href="grupos.html"><span class="lbl">Grupos</span></a></li>
-        <li><a href="cursos.html"><span class="lbl">Cursos</span></a></li>
-        <li><a href="niveis.html"><span class="lbl">Níveis</span></a></li>
-        <li><a href="materiais-didaticos.html"><span class="lbl">Materiais didáticos</span></a></li>
+        <li><a href="../academico/grupos.html"><span class="lbl">Grupos</span></a></li>
+        <li><a href="../academico/cursos.html"><span class="lbl">Cursos</span></a></li>
+        <li><a href="../academico/niveis.html"><span class="lbl">Níveis</span></a></li>
       </ul>
+    </li>
+    <li class="green">
+      <a href="../servicos/servicos.html">
+	            <span>
+	                <i class="fa fa-cogs" aria-hidden="true"></i>
+	                <span class="lbl">Serviços</span>
+	            </span>
+      </a>
     </li>
   </ul>
 
