--- a/includes/side-bar.html
+++ b/includes/side-bar.html
@@ -22,15 +22,8 @@
         <li><a href="../academico/grupos.html"><span class="lbl">Grupos</span></a></li>
         <li><a href="../academico/cursos.html"><span class="lbl">Cursos</span></a></li>
         <li><a href="../academico/niveis.html"><span class="lbl">Níveis</span></a></li>
+        <li><a href="../servicos/servicos.html"><span class="lbl">Serviços</span></a></li>
       </ul>
-    </li>
-    <li class="green">
-      <a href="../servicos/servicos.html">
-	            <span>
-	                <i class="fa fa-cogs" aria-hidden="true"></i>
-	                <span class="lbl">Serviços</span>
-	            </span>
-      </a>
     </li>
   </ul>
 
