--- a/css/less/flow/flow-box-typical.less
+++ b/css/less/flow/flow-box-typical.less
@@ -13,6 +13,7 @@
   .box-typical-header {
     display: table;
     width: 100%;
+    background-color: #f6f8fa;
     &.box-typical-header-bordered {
       border-bottom: solid 1px @color-border-light;
     }
