--- a/css/less/flow/flow-modals.less
+++ b/css/less/flow/flow-modals.less
@@ -1,3 +1,16 @@
+.modal {
+  overflow-x: auto;
+  overflow-y: scroll; /* Elimina a segunda barra de rolagem no mobile */
+
+  font-size: 18px;
+  .form-label{
+    margin-bottom: 0;
+  }
+  .modal-lg{
+    width: 95%;
+    max-width: 1024px;
+  }
+}
 
 .modal-black-full {
   &.modal {
