Ajustes em postos avançados

--- a/includes/side-bar.html
+++ b/includes/side-bar.html
@@ -24,6 +24,7 @@
         <li><a href="../academico/niveis.html"><span class="lbl">Níveis</span></a></li>
         <li><a href="../servicos/servicos.html"><span class="lbl">Serviços</span></a></li>
         <li><a href="../posto/posto.html"><span class="lbl">Posto avançado</span></a></li>
+        <li><a href="../posto/unidade.html"><span class="lbl">Unidade</span></a></li>
       </ul>
     </li>
   </ul>
