--- a/css/less/flow/flow-breadcrumb.less
+++ b/css/less/flow/flow-breadcrumb.less
@@ -16,6 +16,10 @@
     border-color: #c2c9cf;
     color: #828c94;
   }
+  &.blue-ctj{
+    border-top: 5px solid @blue-ctj;
+  }
+  .clearfix();
 }
 
 .breadcrumb > li + li::before {
