--- a/css/less/flow/flow-variables.less
+++ b/css/less/flow/flow-variables.less
@@ -17,7 +17,8 @@
 @green: #00a65a;
 @aqua: #00c0ef;
 @yellow: #f39c12;
-@blue: #0073b7;
+@blue: #2e3192;
+
 @navy: #001F3F;
 @teal: #39CCCC;
 @olive: #3D9970;
@@ -30,7 +31,11 @@
 @gray: #eaeaec;
 @white: #ffffff;
 
-//Cores de do atmosfero
+
+//Cores de elementos especificos do ctj
+@blue-ctj: #2e3192;
+@green-ctj: ;
+
 @blue-one: #3984b7;
 @blue-darken-one: darken(@blue-one, 50%);
 @blue-light-one: #53b7f6;
