--- a/includes/side-bar.html
+++ b/includes/side-bar.html
@@ -19,7 +19,7 @@
 	                <span class="lbl">Acadêmico</span>
 	            </span>
       <ul>
-        <li><a href="../academico/grupos.html"><span class="lbl">Grupos</span></a></li>
+        <li><a href="../academico/grupos.html" class="active"><span class="lbl">Grupos</span></a></li>
         <li><a href="../academico/cursos.html"><span class="lbl">Cursos</span></a></li>
         <li><a href="../academico/niveis.html"><span class="lbl">Níveis</span></a></li>
         <li><a href="../servicos/servicos.html"><span class="lbl">Serviços</span></a></li>
