--- a/css/less/flow/flow-btns.less
+++ b/css/less/flow/flow-btns.less
@@ -4,9 +4,14 @@
 
 .btn-group, .btn-group-vertical {
   .btn {
+    &.btn-secondary-outline {
+      border-color: #bec5ca;
+    }
     &.active {
       background-color: #5cb85c;
       border-color: #5cb85c;
+      color: #fff;
     }
+
   }
 }
