--- a/css/less/flow/flow-core.less
+++ b/css/less/flow/flow-core.less
@@ -395,3 +395,8 @@ td.hiddenrow {
 .bck-analitcs-grey{
   background: url("../img/statistic-box-gray.png") 50% 50% no-repeat;
 }
+
+// Esconder qualquer coisa
+.hidden-iten{
+  display: none;
+}
