--- a/includes/header.html
+++ b/includes/header.html
@@ -1,7 +1,7 @@
 <header class="site-header">
   <div class="container-fluid">
     <a href="#" class="site-logo">
-      <img class="hidden-md-down" src="../../img/logo-2.png" alt="">
+      <img class="hidden-md-down" src="../../img/logo-ctj-flow.png" alt="">
       <img class="hidden-lg-up" src="../../img/logo-2-mob.png" alt="">
     </a>
     <button class="hamburger hamburger--htla">
