--- a/includes/side-bar.html
+++ b/includes/side-bar.html
@@ -27,6 +27,50 @@
         <li><a href="../posto/unidade.html"><span class="lbl">Unidades</span></a></li>
       </ul>
     </li>
+    <li class="green with-sub">
+	            <span>
+	                <i class="fa fa-building-o" aria-hidden="true"></i>
+	                <span class="lbl">Administrativo</span>
+	            </span>
+      <ul>
+        <li><a href="#"><span class="lbl">#</span></a></li>
+        <li><a href="#"><span class="lbl">#</span></a></li>
+        <li><a href="#"><span class="lbl">#</span></a></li>
+      </ul>
+    </li>
+    <li class="gold with-sub">
+	            <span>
+	                <i class="fa fa-money" aria-hidden="true"></i>
+	                <span class="lbl">Financeiro</span>
+	            </span>
+      <ul>
+        <li><a href="#"><span class="lbl">#</span></a></li>
+        <li><a href="#"><span class="lbl">#</span></a></li>
+        <li><a href="#"><span class="lbl">#</span></a></li>
+      </ul>
+    </li>
+    <li class="blue-dirty with-sub">
+	            <span>
+	                <i class="fa fa-cogs" aria-hidden="true"></i>
+	                <span class="lbl">Suporte</span>
+	            </span>
+      <ul>
+        <li><a href="#"><span class="lbl">#</span></a></li>
+        <li><a href="#"><span class="lbl">#</span></a></li>
+        <li><a href="#"><span class="lbl">#</span></a></li>
+      </ul>
+    </li>
+    <li class="red with-sub">
+	            <span>
+	                <i class="fa fa-lock" aria-hidden="true"></i>
+	                <span class="lbl">Segurança</span>
+	            </span>
+      <ul>
+        <li><a href="#"><span class="lbl">#</span></a></li>
+        <li><a href="#"><span class="lbl">#</span></a></li>
+        <li><a href="#"><span class="lbl">#</span></a></li>
+      </ul>
+    </li>
   </ul>
 
   <section>
