--- a/css/less/flow/template/partials/helpers.less
+++ b/css/less/flow/template/partials/helpers.less
@@ -45,14 +45,14 @@
 .tbl-cell { display: table-cell; vertical-align: middle; }
 
 // Borders
-.no-border, .b-a-0 { border: none; }
+.no-border, .b-a-0 { border: none !important;}
 .b-a { border: solid 1px @color-border-light; }
 .b-l { border-left: solid 1px @color-border-light; }
 .b-r { border-right: solid 1px @color-border-light; }
 .b-t { border-top: solid 1px @color-border-light; }
 .b-b { border-bottom: solid 1px @color-border-light; }
-.b-t-0 { border-top: none; }
-.b-r-0 { border-bottom: none; }
+.b-t-0 { border-top: none !important;}
+.b-r-0 { border-bottom: none !important;}
 .border-primary { border-color: @color-blue; }
 .border-default { border-color: @color-border-light; }
 .border-warning { border-color: @color-gold; }
@@ -127,14 +127,14 @@
 .m-t { margin-top: 15px; }
 .m-x { margin-left: 15px; margin-right: 15px; }
 .m-y { margin-top: 15px; margin-bottom: 15px; }
-.m-a-0 { margin: 0; }
-.m-r-0 { margin-right: 0; }
-.m-b-0 { margin-bottom: 0; }
-.m-l-0 { margin-left: 0; }
-.m-t-0 { margin-top: 0; }
-.m-x-0 { margin-left: 0; margin-right: 0; }
-.m-y-0 { margin-top: 0; margin-bottom: 0; }
-.m-x-auto { margin-right: auto; margin-left: auto; }
+.m-a-0 { margin: 0 !important;}
+.m-r-0 { margin-right: 0 !important;}
+.m-b-0 { margin-bottom: 0 !important;}
+.m-l-0 { margin-left: 0 !important;}
+.m-t-0 { margin-top: 0 !important;}
+.m-x-0 { margin-left: 0; margin-right: 0 !important;}
+.m-y-0 { margin-top: 0; margin-bottom: 0 !important;}
+.m-x-auto { margin-right: auto; margin-left: auto !important;}
 
 // Paddings
 .p-x-n { padding-left: -15px; padding-right: -15px; }
@@ -162,12 +162,12 @@
 .p-x { padding-left: 15px; padding-right: 15px; }
 .p-y { padding-top: 15px; padding-bottom: 15px; }
 .p-a-0 { padding: 0; }
-.p-r-0 { padding-right: 0; }
-.p-b-0 { padding-bottom: 0; }
-.p-l-0 { padding-left: 0; }
-.p-t-0 { padding-top: 0; }
-.p-x-0 { padding-left: 0; padding-right: 0; }
-.p-y-0 { padding-top: 0; padding-bottom: 0; }
+.p-r-0 { padding-right: 0 !important; }
+.p-b-0 { padding-bottom: 0 !important; }
+.p-l-0 { padding-left: 0 !important; }
+.p-t-0 { padding-top: 0 !important; }
+.p-x-0 { padding-left: 0 !important; padding-right: 0 !important; }
+.p-y-0 { padding-top: 0 !important; padding-bottom: 0 !important; }
 .p-x-auto { padding-right: auto; padding-left: auto; }
 
 .display-table {
