Reajustes em todas as telas

--- a/includes/side-bar.html
+++ b/includes/side-bar.html
@@ -33,9 +33,9 @@
 	                <span class="lbl">Administrativo</span>
 	            </span>
       <ul>
-        <li><a href="#"><span class="lbl">#</span></a></li>
-        <li><a href="#"><span class="lbl">#</span></a></li>
-        <li><a href="#"><span class="lbl">#</span></a></li>
+        <li><a href="#"><span class="lbl">opção #</span></a></li>
+        <li><a href="#"><span class="lbl">opção #</span></a></li>
+        <li><a href="#"><span class="lbl">opção #</span></a></li>
       </ul>
     </li>
     <li class="gold with-sub">
@@ -44,9 +44,9 @@
 	                <span class="lbl">Financeiro</span>
 	            </span>
       <ul>
-        <li><a href="#"><span class="lbl">#</span></a></li>
-        <li><a href="#"><span class="lbl">#</span></a></li>
-        <li><a href="#"><span class="lbl">#</span></a></li>
+        <li><a href="#"><span class="lbl">opção #</span></a></li>
+        <li><a href="#"><span class="lbl">opção #</span></a></li>
+        <li><a href="#"><span class="lbl">opção #</span></a></li>
       </ul>
     </li>
     <li class="blue-dirty with-sub">
@@ -55,9 +55,9 @@
 	                <span class="lbl">Suporte</span>
 	            </span>
       <ul>
-        <li><a href="#"><span class="lbl">#</span></a></li>
-        <li><a href="#"><span class="lbl">#</span></a></li>
-        <li><a href="#"><span class="lbl">#</span></a></li>
+        <li><a href="#"><span class="lbl">opção #</span></a></li>
+        <li><a href="#"><span class="lbl">opção #</span></a></li>
+        <li><a href="#"><span class="lbl">opção #</span></a></li>
       </ul>
     </li>
     <li class="red with-sub">
@@ -66,9 +66,9 @@
 	                <span class="lbl">Segurança</span>
 	            </span>
       <ul>
-        <li><a href="#"><span class="lbl">#</span></a></li>
-        <li><a href="#"><span class="lbl">#</span></a></li>
-        <li><a href="#"><span class="lbl">#</span></a></li>
+        <li><a href="#"><span class="lbl">opção #</span></a></li>
+        <li><a href="#"><span class="lbl">opção #</span></a></li>
+        <li><a href="#"><span class="lbl">opção #</span></a></li>
       </ul>
     </li>
   </ul>
