--- a/css/less/flow/flow-btns.less
+++ b/css/less/flow/flow-btns.less
@@ -5,12 +5,20 @@
 .btn-group, .btn-group-vertical {
   .btn {
     &.btn-secondary-outline {
-      border-color: #bec5ca;
+      border-color: #d4dee6;
+      background-color: #efefef;
+      color: #6b7a85;
+      &:hover{
+        color: #91a1ad !important;
+      }
     }
     &.active {
       background-color: #5cb85c;
       border-color: #5cb85c;
       color: #fff;
+      &:hover{
+        color: #fff !important;
+      }
     }
 
   }
