--- a/includes/side-bar.html
+++ b/includes/side-bar.html
@@ -19,17 +19,17 @@
 	                <span class="lbl">Acadêmico</span>
 	            </span>
       <ul>
+        <li><a href="../posto/unidade.html"><span class="lbl">Unidades</span></a></li>
+        <li><a href="../posto/posto.html"><span class="lbl">Posto avançado</span></a></li>
         <li><a href="../academico/grupos.html" class="active"><span class="lbl">Grupos</span></a></li>
         <li><a href="../academico/cursos.html"><span class="lbl">Cursos</span></a></li>
         <li><a href="../academico/niveis.html"><span class="lbl">Níveis</span></a></li>
         <li><a href="../servicos/servicos.html"><span class="lbl">Serviços</span></a></li>
-        <li><a href="../posto/posto.html"><span class="lbl">Posto avançado</span></a></li>
-        <li><a href="../posto/unidade.html"><span class="lbl">Unidades</span></a></li>
       </ul>
     </li>
     <li class="green with-sub">
 	            <span>
-	                <i class="fa fa-building-o" aria-hidden="true"></i>
+	                <i class="fa fa-building" aria-hidden="true"></i>
 	                <span class="lbl">Administrativo</span>
 	            </span>
       <ul>
