Ajustes quase finais

--- a/includes/side-bar.html
+++ b/includes/side-bar.html
@@ -1,18 +1,12 @@
 <div class="mobile-menu-left-overlay"></div>
 <nav class="side-menu">
   <ul class="side-menu-list">
-    <!--<li class="gold with-sub">
+    <li class="purple">
 	            <span>
-	                <i class="font-icon font-icon-widget"></i>
+	                <i class="font-icon font-icon-dashboard mr-xs" aria-hidden="true"></i>
 	                <span class="lbl">Dashboard</span>
 	            </span>
-      <ul>
-        <li><a href="#"><span class="lbl">Menu 1</span></a></li>
-        <li><a href="#"><span class="lbl">Menu 2</span></a></li>
-        <li><a href="#"><span class="lbl">Menu 3</span></a></li>
-
-      </ul>
-    </li>-->
+    </li>
     <li class="blue with-sub">
 	            <span>
 	                <i class="fa fa-book" aria-hidden="true"></i>
