Criação dos editar

--- a/includes/header.html
+++ b/includes/header.html
@@ -101,7 +101,7 @@
         </div><!--.site-header-shown-->
 
         <div class="mobile-menu-right-overlay"></div>
-        <div class="site-header-collapsed">
+        <!--<div class="site-header-collapsed">
           <div class="site-header-collapsed-in">
             <div class="dropdown dropdown-typical dropdown-filtro">
               Unidade :
