--- a/css/less/flow/flow-box-typical.less
+++ b/css/less/flow/flow-box-typical.less
@@ -30,6 +30,12 @@
           line-height: 1.4;
           padding: 1px 0;
         }
+        h1 { font-size: 2.5rem; margin-top: 0; }
+        h2 { font-size: 2rem; }
+        h3 { font-size: 1.75rem; }
+        h4 { font-size: 1.5rem; }
+        h5 { font-size: 1.25rem; }
+        h6 { font-size: 1rem; }
       }
       &.tbl-cell-actions {
         text-align: right;
@@ -68,6 +74,7 @@
         color: @color-blue;
       }
     }
+
   }
   .box-typical-header-sm {
     padding: 12px 15px;
