--- a/css/less/flow/flow-core.less
+++ b/css/less/flow/flow-core.less
@@ -365,6 +365,9 @@ a.toggle-icon {
   a.toggle-icon {
     border-bottom: none;
   }
+  .row-b-t-0 td{
+    border-top: none !important;
+  }
 }
 
 .img-circle-sm {
