--- a/css/less/flow/template/partials/interface.less
+++ b/css/less/flow/template/partials/interface.less
@@ -741,9 +741,20 @@ a.label-light-grey:hover {
   color: @color-grey-blue-lighter-txt;
 }
 
-.table-active-visual {
+.table-active-next {
   & > td {
     background-color: @white;
+    color: #757575;
+  }
+  & > th {
+    color: #757575;
+  }
+}
+
+
+.table-active-visual {
+  & > td {
+    background-color: @color-bg-light-green;
     border-bottom: 2px solid @color-grey-blue-lighter-txt;
     font-weight: 700;
   }
